apps/base/servarr/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  labels:
    app: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:2.3.5 # {"$imagepolicy": "servarr:prowlarr"}
          ports:
            - name: http
              containerPort: 9696
          volumeMounts:
            - name: prowlarr
              mountPath: /config
      volumes:
        - name: prowlarr
          persistentVolumeClaim:
            claimName: prowlarr
