apps/base/servarr/prowlarr/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Prowlarr
    gethomepage.dev/group: Media Server
    gethomepage.dev/description: Subtitle Downloader
    gethomepage.dev/icon: prowlarr.png
spec:
  parentRefs:
    - name: http
      namespace: kgateway-system
  hostnames:
    - "prowlarr.southcity.dev"
  rules:
    - backendRefs:
        - name: prowlarr
          port: 9696
